--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "GitHub Action for Verifying Node Package Module Version"
 description: "Verifies that a NPM package matches the current tag"
 runs:
-  using: "ubuntu"
-  main: "entry.sh"
+  using: "node12"
+  main: "index.js"
